--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,7 @@
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-2.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.0.jar"/>
+	<classpathentry kind="lib" path="/home/yoshi/zookeeper-3.3.1/zookeeper-3.3.1.jar"/>
+	<classpathentry kind="lib" path="/home/yoshi/zookeeper-3.3.1/lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
