--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,5 @@
 	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/zookeeper-3.3.1.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="build"/>
 </classpath>
