Inicio da implementação de JazidaClient e + RoundRobinPartitionPolicy
git-svn-id: svn://lapesi.cefetpi.br/jazida@16 73128902-11a4-f64b-800a-f0fca4e90f86

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/opala.jar"/>
 	<classpathentry kind="lib" path="lib/hadoop-core-0.20.1.jar"/>
@@ -10,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/lucene-analyzers-2.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.15.jar"/>
 	<classpathentry kind="lib" path="lib/zookeeper-3.3.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
