Implementação de busca por imagens similares. OBS: Falta busca de imagens por metadados.
git-svn-id: svn://lapesi.cefetpi.br/jazida@40 73128902-11a4-f64b-800a-f0fca4e90f86

--- a/.classpath
+++ b/.classpath
@@ -13,6 +13,8 @@
 	<classpathentry kind="lib" path="lib/test/mockito-all-1.8.5.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-analyzers-3.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-core-3.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/lire.jar"/>
+	<classpathentry kind="lib" path="lib/caliph-emir-cbir.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="build"/>
 </classpath>
