--- a/opala.conf
+++ b/opala.conf
@@ -1,7 +1,7 @@
 ###################################### INDICE FILE ######################
 
 #Endereço do índice de Imagem
-opala.image.index.address=./sample-data/indice/image
+opala.image.index.address=./webapps/indice/image
 
 #Endereço do índice de Texto
 opala.text.index.address=./webapps/indice/text
