Melhorias no build e na forma de configuração do projeto

--- a/opala.conf
+++ b/opala.conf
@@ -1,18 +1,18 @@
 ###################################### INDICE FILE ######################
 
 #Endereço do índice de Imagem
-opala.image.index.address=./webapps/indice/image
+opala.image.index.address=./data/indice/image
 
 #Endereço do índice de Texto
-opala.text.index.address=./webapps/indice/text
+opala.text.index.address=./data/indice/text
 
 ###################################### BACKUP FILE ######################
 
 #Endereço do backup do índice de imagem
-opala.image.index.backup.address=./webapps/backup/image
+opala.image.index.backup.address=./data/backup/image
 
 #Endereço do backup do índice de texto
-opala.text.index.backup.address=./webapps/backup/text
+opala.text.index.backup.address=./data/backup/text
 
 #Quantidade de backups do índice de imagem
 opala.image.index.backup.number=5
@@ -38,7 +38,7 @@ opala.backup.frequency=5
 ###################################### LOGS FILE ########################
 
 #Endereço dos arquivos de logs da otimização
-opala.log.optimize.address=./webapps/log/Optimize.log
+opala.log.optimize.address=./data/log/Optimize.log
 
 #Endereço dos arquivos de logs do backup 
-opala.log.backup.address=./webapps/log/Backup.log
+opala.log.backup.address=./data/log/Backup.log
