--- a/build.xml
+++ b/build.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project name="Jazida" basedir="." default="testAndBuild">
+<project name="Jazida" basedir="." default="build">
 
-	<!-- set global properties for this build -->
-
+	<!-- Propriedades globais do build -->
+	<property name="version" value="0.1" />
+	
 	<property name="dir.base" value="." />
-	<property name="dir.src" value="src" />
-	<property name="dir.src.class" value="build" />
-	<property name="dir.test" value="test" />
-	<property name="dir.test.class" value="build" />
-	<property name="dir.lib" value="lib" />
-	<property name="dir.docs" value="docs" />
+	<property name="dir.src" value="${dir.base}/src" />
+	<property name="dir.src.class" value="${dir.base}/build" />
+	<property name="dir.test" value="${dir.base}/test" />
+	<property name="dir.test.class" value="${dir.base}/build" />
+	<property name="dir.lib" value="${dir.base}/lib" />
+	<property name="dir.docs" value="${dir.base}/docs" />
+	<property name="dir.conf" value="${dir.base}/conf" />
+	<property name="dir.dist" value="${dir.base}/dist" />
+	<property name="dir.bin" value="${dir.base}/bin" />
 
-	<property name="jar.name" value="${dir.base}/bin/jazida.jar" />
+	<property name="jar.name" value="jazida-${version}.jar" />
+	<property name="zip.name" value="jazida-${version}.zip" />
+	<property name="tar.name" value="jazida-${version}.tar" />
 
 	<!-- Classpath's do Projeto -->
 	<path id="classpath.base">
@@ -49,9 +55,9 @@
 	</target>
 
 	<!-- Cria o arquivo .jar do Jazida -->
-	<target name="createjar" depends="compile" description="Cria o arquivo .jar contendo os arquivos .classe e .java">
+	<target name="create-jar" depends="compile" description="Cria o arquivo .jar contendo os arquivos .classe e .java">
 		<echo>Iniciando criação do jar</echo>
-		<jar destfile="${jar.name}" compress="true">
+		<jar destfile="${dir.dist}/${jar.name}" compress="true">
 			<fileset dir="${dir.src}">
 				<include name="**/*.java" />
 			</fileset>
@@ -60,18 +66,7 @@
 				<include name="**/*.class" />
 			</fileset>
 		</jar>
-		<echo>Arquivo ${dir.src}/${jar.name} criado com sucesso.</echo>
-	</target>
-
-	<!-- Executa testes e cria o arquivo jar do Opala -->
-	<target name="testAndBuild">
-		<antcall target="test">
-		</antcall>
-		<antcall target="createjar">
-		</antcall>
-		<antcall target="javadoc">
-		</antcall>
-		<echo>Build finalizado.</echo>
+		<echo>Arquivo ${dir.bin}/${jar.name} criado com sucesso.</echo>
 	</target>
 
 	<!-- Executa os testes do Opala -->
@@ -90,5 +85,52 @@
 			<classpath refid="classpath.base" />
 		</javadoc>
 	</target>
-
+	
+	<!-- Cria pasta de distribuição do projeto -->
+	<target name="create-dist">
+		<delete dir="${dir.dist}"></delete>
+		<mkdir dir="${dir.base}/dist"/>
+		<copy todir="${dir.dist}/conf" >
+			<fileset dir="${dir.conf}" />
+		</copy>
+		<copy file="${dir.base}/opala.conf" tofile="${dir.dist}/opala.conf" />
+		<copy todir="${dir.dist}/lib" >
+			<fileset dir="${dir.lib}">
+				<exclude name="test"/>
+				<exclude name="test/**"/>
+			</fileset>
+		</copy>
+		<antcall target="create-jar" />
+		<antcall target="javadoc" />
+		<copy todir="${dir.dist}/docs" >
+			<fileset dir="${dir.docs}" />
+		</copy>
+		<copy todir="${dir.dist}" >
+			<fileset dir="${dir.bin}" />
+		</copy>
+		<zip destfile="${dir.dist}/${zip.name}" encoding="UTF-8"> 
+		  <fileset dir="${dir.dist}"> 
+		    <include name="**/*" />  
+		  </fileset> 
+		</zip>
+		<tar destfile="${dir.dist}/${tar.name}" longfile="gnu">
+			<tarfileset dir="${dir.dist}" filemode="755">
+				<include name="jazida" />
+			</tarfileset>
+			<tarfileset dir="${dir.dist}">
+				<include name="**/*" />
+				<exclude name="jazida" />
+				<exclude name="${zip.name}"/>
+			</tarfileset>
+		</tar>
+	</target>
+	
+	<!-- Executa testes, cria o arquivo jar, gera javadoc e cria arquivo de distribuição do Jazida -->
+	<target name="build">
+		<antcall target="test" />
+		<antcall target="create-jar" />
+		<antcall target="javadoc" />
+		<antcall target="create-dist" />
+		<echo>Build finalizado.</echo>
+	</target>
 </project>
