--- a/build.xml
+++ b/build.xml
@@ -100,6 +100,11 @@
 				<exclude name="test/**"/>
 			</fileset>
 		</copy>
+		<copy todir="${dir.dist}/sample-data" >
+			<fileset dir="${dir.base}/sample-data">
+				<exclude name="wikipedia.lines.*"/>
+			</fileset>
+		</copy>
 		<antcall target="create-jar" />
 		<antcall target="javadoc" />
 		<copy todir="${dir.dist}/docs" >
@@ -116,10 +121,12 @@
 		<tar destfile="${dir.dist}/${tar.name}" longfile="gnu">
 			<tarfileset dir="${dir.dist}" filemode="755">
 				<include name="jazida" />
+				<include name="load-test" />
 			</tarfileset>
 			<tarfileset dir="${dir.dist}">
 				<include name="**/*" />
 				<exclude name="jazida" />
+				<exclude name="load-test" />
 				<exclude name="${zip.name}"/>
 			</tarfileset>
 		</tar>
