Correção no arquivo de build.xml
git-svn-id: svn://lapesi.cefetpi.br/jazida@65 73128902-11a4-f64b-800a-f0fca4e90f86

--- a/build.xml
+++ b/build.xml
@@ -57,6 +57,7 @@
 	<!-- Cria o arquivo .jar do Jazida -->
 	<target name="create-jar" depends="compile" description="Cria o arquivo .jar contendo os arquivos .classe e .java">
 		<echo>Iniciando criação do jar</echo>
+		<mkdir dir="${dir.dist}" />
 		<jar destfile="${dir.dist}/${jar.name}" compress="true">
 			<fileset dir="${dir.src}">
 				<include name="**/*.java" />
